package com.susequid.erp.entidad;

public enum EstadoEquipo {
    ACTIVO,
    EN_MANTENIMIENTO,
    INACTIVO,
    DADO_DE_BAJA
}
