package com.susequid.erp.entidad;

public enum EstadoWorkflow {
    PENDIENTE,
    EN_PROCESO,
    COMPLETADO,
    RECHAZADO
}
