package com.susequid.erp.entidad;

public enum RolNombre {
    ADMINISTRADOR,
    TECNICO,
    SUPERVISOR,
    COMPRAS,
    COMERCIAL,
    DESPACHO,
    HSEQ,
    BODEGA
}
