package com.susequid.erp.entidad;

/**
 * Pestaña del panel de actividades (técnico / supervisor).
 */
public enum SeccionPanelFlujo {
    OPERATIVOS,
    FLOTA
}
