package com.susequid.erp.entidad;

public enum TipoEvidencia {
    IMAGEN,
    FIRMA,
    ARCHIVO
}

